syntax = "proto3";

package org.raystack.dagger.consumer;

option java_multiple_files = true;
option java_package = "org.raystack.dagger.consumer";
option java_outer_classname = "TestLogMessageProto";

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";


message TestAggregatedSupplyKey {
  google.protobuf.Timestamp window_start_time = 1;
  google.protobuf.Timestamp window_end_time = 2;
  int32 s2_id_level = 3;
  int64 s2_id = 4;
  TestVehicleType.Enum vehicle_type = 5;
}

message TestAggregatedSupplyMessage {
  google.protobuf.Timestamp window_start_time = 1;
  google.protobuf.Timestamp window_end_time = 2;
  int32 s2_id_level = 3;
  int64 s2_id = 4;
  TestVehicleType.Enum vehicle_type = 5;
  int64 unique_drivers = 6;
  google.protobuf.Timestamp event_timestamp = 7;
}

message TestVehicleType {
  enum Enum {
    UNKNOWN = 0;
    CAR = 1;
    BIKE = 2;
  }
}

message TestBookingLogKey {
  TestServiceType.Enum service_type = 1;
  string order_number = 2;
  string order_url = 3;
  TestBookingStatus.Enum status = 4;
  google.protobuf.Timestamp event_timestamp = 5;
}

message TestBookingLogMessage {
  TestServiceType.Enum service_type = 1;
  string order_number = 2;
  string order_url = 3;
  TestBookingStatus.Enum status = 4;
  google.protobuf.Timestamp event_timestamp = 5;
  string customer_id = 6;
  string customer_url = 7;
  string driver_id = 8;
  string driver_url = 9;

  string activity_source = 11;
  string service_area_id = 12;

  float amount_paid_by_cash = 16;

  TestLocation driver_pickup_location = 26;
  TestLocation driver_dropoff_location = 27;

  string customer_email = 28;
  string customer_name = 29;
  string customer_phone = 30;

  string driver_email = 31;
  string driver_name = 32;
  string driver_phone = 33;

  int32 cancel_reason_id = 36;
  string cancel_reason_description = 37;

  google.protobuf.Timestamp booking_creation_time = 41;

  float total_customer_discount = 40;
  float gopay_customer_discount = 42;
  float voucher_customer_discount = 43;

  google.protobuf.Timestamp pickup_time = 44;
  float driver_paid_in_cash = 45;
  float driver_paid_in_credit = 46;

  TestVehicleType.Enum vehicle_type = 51;

  int64 customer_total_fare_without_surge = 52;
  bool customer_dynamic_surge_enabled = 55;

  int64 driver_total_fare_without_surge = 56;
  bool driver_dynamic_surge_enabled = 59;
  repeated string meta_array = 60;

  google.protobuf.Struct profile_data = 61;
  google.protobuf.Struct event_properties = 62;
  google.protobuf.Struct key_values = 63;

  double cash_amount = 64;

  repeated int32 int_array_field = 65;

  map<string, string> metadata = 66;

  TestPaymentOptionMetadata payment_option_metadata = 67;

  repeated TestEnumType.Enum test_enums = 68;

  repeated TestRoute routes = 69;

  double customer_price = 70;

  repeated bool boolean_array_field = 71;

  repeated double double_array_field = 72;

  repeated float float_array_field = 73;

  repeated int64 long_array_field = 74;
}

message TestPaymentOptionMetadata {
  string masked_card = 1;
  string network = 2;
}

message TestFeedbackLogKey {
  string order_number = 1;
  google.protobuf.Timestamp event_timestamp = 2;
}

message TestFeedbackLogMessage {
  string order_number = 1;
  google.protobuf.Timestamp event_timestamp = 2;
  string driver_id = 3;
  string customer_id = 4;
  int32 feedback_rating = 5;
  string feedback_comment = 6;
  float tip_amount = 7;
  bool feedback_skipped = 8;
  TestServiceType.Enum service_type = 9;
  TestFeedbackSource.Enum feedback_source = 10;
  repeated TestReason reason = 11;
  string locale = 12;
  bool support_ticket_created = 13;
  bool is_gopay_success = 14;
  google.protobuf.Timestamp order_completion_time = 15;
  google.protobuf.Timestamp feedback_creation_time = 16;
}

message TestReason {
  string reason_id = 1;
  string group_id = 2;
}

message TestRoute {
  TestLocation start = 1;
  TestLocation end = 2;
  float distance_in_kms = 3;
  google.protobuf.Duration estimated_duration = 4;
  int32 route_order = 5;
}

message TestFeedbackSource {
  enum Enum {
    CUSTOMER = 0;
    DRIVER = 1;
  }
}

message TestServiceType {
  enum Enum {
    UNKNOWN = 0;
    GO_RIDE = 1;
    GO_SEND = 2;
    GO_SHOP = 3;
  }
}

message TestEnumType {
  enum Enum {
    UNKNOWN = 0;
    TYPE1 = 1;
    TYPE2 = 2;
    TYPE3 = 3;
  }
}

message TestBookingStatus {
  enum Enum {
    UNKNOWN = 0;
    CREATED = 1;
    DRIVER_FOUND = 2;
    PICKED_UP = 3;
    COMPLETED = 4;
  }
}

message TestAuditEntityLogKey {
  string audit_id = 1;
  string entity_id = 2;
  string restaurant_id = 3;
  google.protobuf.Timestamp event_timestamp = 4;
}

message TestAuditEntityLogMessage {
  string audit_id = 1;
  string entity_id = 2;
  string restaurant_id = 3;
  google.protobuf.Timestamp event_timestamp = 4;
  string entity_type = 5;
  string restaurant_name = 6;
  map<string, string> current_state = 7;
  map<string, string> previous_values = 8;
  string source = 9;
}

message TestLocation {
  string name = 1;
  string address = 2;
  double latitude = 3;
  double longitude = 4;
  string type = 5;
  string note = 6;
  string place_id = 7;
  float accuracy_meter = 8;
  string gate_id = 9;
}

message TestMessageEnvelope {
  string service_name = 1;
  string topic = 2;
  bytes log_key = 3;
  bytes log_message = 4;
}

message TestSurgeFactorLogMessage {
  google.protobuf.Timestamp event_timestamp = 1;
  google.protobuf.Timestamp start_time = 2;
  google.protobuf.Timestamp end_time = 3;
  int32 s2_id_level = 4;
  int64 s2_id = 5;
  TestServiceType.Enum service_type = 6;
  float surge_factor = 7;
}

message TestEnrichedBookingLogMessage {
  TestBookingLogMessage booking_log = 1;
  TestCustomerLogMessage customer_profile = 2;
  TestProfile driver_profile = 3;
  google.protobuf.Timestamp event_timestamp = 4;
}

message TestCustomerLogMessage {
  string customer_id = 1;
  string name = 2;
  string email = 3;
  bool phone_verified = 4;
}

message TestProfile {
  string driver_id = 1;
}

message TestSerDeLogKey {
  google.protobuf.Timestamp window_start_time = 1;
  google.protobuf.Timestamp window_end_time = 2;
  int32 s2_id_level = 3;
  int64 s2_id = 4;
  TestServiceType.Enum service_type = 5;
}

message TestSerDeLogMessage {
  google.protobuf.Timestamp window_start_time = 1;
  google.protobuf.Timestamp window_end_time = 2;
  int32 s2_id_level = 3;
  int64 s2_id = 4;
  TestServiceType.Enum service_type = 5;
  int64 unique_customers = 6;
  google.protobuf.Timestamp event_timestamp = 7;

  string string_type = 8;
  bool bool_type = 9;
  TestProfile message_type = 10;
  repeated TestProfile repeated_message_type = 11;
  map<string, string> map_type = 12;
}

message TestApiLogMessage {
  google.protobuf.Timestamp event_timestamp = 1;
  repeated string request_headers_extra = 2;
}

message TestPrimitiveMessage {
  bool is_valid = 1;
  string order_number = 2;
  bytes order_hash = 3;
  double latitude = 4;
  double longitude = 5;
  float price = 6;
  int32 packet_count = 7;
  int64 phone = 8;
  google.protobuf.Timestamp event_timestamp = 9;
  TestServiceType.Enum service_type = 10;
}